actix-web-codegen/tests/trybuild/route-unexpected-method-fail.stderr
error: Unexpected HTTP Method: `UNEXPECTED`
 --> $DIR/route-unexpected-method-fail.rs:3:21
  |
3 | #[route("/", method="UNEXPECTED")]
  |                     ^^^^^^^^^^^^

error[E0425]: cannot find value `index` in this scope
  --> $DIR/route-unexpected-method-fail.rs:10:49
   |
10 |     let srv = test::start(|| App::new().service(index));
   |                                                 ^^^^^ not found in this scope
